--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "bugs": {
     "url": "https://github.com/mcarson24/myTeam/issues"
   },
-  "homepage": "https://github.com/mcarson24/myTeam#readme"
+  "homepage": "https://github.com/mcarson24/myTeam#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^8.2.2",
+    "mysql2": "^2.3.3"
+  }
 }
